# zentyal

./: .gitignore  AUTHORS  README.md
client/asterisk/stubs/: Makefile.am  extconfig.conf.mas  extensions.conf.mas  meetme.conf.mas  modules.conf.mas  res_ldap.conf.mas  rtp.conf.mas  sip.conf.mas  users.conf.mas  voicemail.conf.mas
client/ca/: AUTHORS  ChangeLog  INSTALL  INSTALL.es  Makefile.am  configure.ac
client/ca/conf/: Makefile.am  openssl.cnf
client/ca/config/: install-sh  missing
client/ca/debian/: changelog  control  copyright  ebox-ca.postinst  ebox-ca.postrm  ebox-ca.prerm  rules
client/ca/migration/: 0001_add_password_aware.pl  0002_fix_permissions.pl  Makefile.am
client/ca/po/: Makefile.am  an.po  ar.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  ebox-ca.pot  el.po  es-sory.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  gl.po  hu.po  id.po  it.po  ja.po  lt.po  nb.po  nl.po  no.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sr.po  sv.po  tr.po  uk.po  zh.po  zh_CN.po  zh_TW.po
client/ca/schemas/: Makefile.am  ca.schemas  ca.yaml
client/ca/stubs/: v3_ext.mas
client/ca/tools/: po-am.footer
client/dhcp/migration/: 0001_import_to_mvc.pl  0002_add_services.pl  0003_fixed_addr_obj.pl  0004_dyn_domains.pl  0005_upgrade_apparmor_profile.pl  0006_remove_zentyal_apparmor_profile.pl  Makefile.am
client/dns/migration/: 0001_add_dns_service.pl  0001_import_to_data_table_model.pl  0002_add_bind_group_etc.pl  0002_fix_active_to_enabled.pl  0003_add_dns_service.pl  0003_fix_dns_service.pl  0004_add_bind_group_etc.pl  0004_remove_ro_dyn_dom.pl  0005_add_keys.pl  Makefile.am
client/ebackup/migration/: 0001_add_default_excludes.pl  0002_changed_remote_options.pl  0003_delete_ebox_crontab.pl  Makefile.am
client/ebox/: API-Changes  AUTHORS  ChangeLog  INSTALL  INSTALL.es  Makefile.am  README  autogen.sh  configure.ac
client/ebox/conf/: 70eboxkeepalive.conf  78remoteservices.conf  80eboxclient.conf  90eboxpglogger.conf  Makefile.am  ebox.cert  ebox.key  ebox.passwd  pgpass  redis.first
client/ebox/contrib/: debianize
client/ebox/debian/: changelog  control  copyright  dirs  ebox.apache-perl.upstart  ebox.config  ebox.cron.hourly  ebox.postinst  ebox.postrm  ebox.preinst  ebox.prerm  ebox.runnerd.upstart  ebox.scripts-common  ebox.templates  ebox.triggers  links  rules
client/ebox/m4/: ebox.m4
client/ebox/migration/: 0001_update_configurelogtable.pl  Makefile.am
client/ebox/po/: LINGUAS  an.po  ar.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  ebox.pot  es-sory.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  gl.po  hu.po  id.po  it.po  ja.po  lt.po  nb.po  nl.po  no.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sr.po  sv.po  tr.po  uk.po  zh_CN.po  zh_TW.po
client/ebox/schemas/: Makefile.am  apache.schemas  events.schemas  events.yaml  firsttime.schemas  global.schemas  global.yaml  keepalive.schemas  logs.schemas  remoteservices.schemas  remoteservices.yaml  sysinfo.schemas  sysinfo.yaml
client/ebox/src/: Makefile.am
client/ebox/stubs/: Makefile.am  apache.mas.in  redis.conf.mas  startup.pl.mas  sudo.mas
client/ebox/tools/: Makefile.am  checktemplate  ebox  ebox-analyze-db  ebox-apache-restart  ebox-clean-gconf  ebox-configuration-report  ebox-consolidate-reportinfo  ebox-create-certificate  ebox-create-db  ebox-dbus-check  ebox-dbus-launch  ebox-gather-reportinfo  ebox-global-action  ebox-import-gconf  ebox-logs-enable  ebox-make-backup  ebox-menu-cache  ebox-migrate  ebox-passwd  ebox-purge-logs  ebox-restore-backup  ebox-runit  ebox-runit-finisher  ebox-set-locale  ebox-sql-table  ebox-sql-table-with-time-period  ebox-sudoers  ebox-sudoers-friendly  ebox-template  ebox-test  ebox-unblock-exec  ebox-unconfigure-module  ebox-update-file-digest  mason-exec  mkpasswd  po-am.footer  po-am.generator  po-subs-am.footer  po-subs-am.generator  (+2 more)
client/ebox/www/: Makefile.am  default.theme  links-widget.html
client/egroupware/migration/: 0001_add_bookmarks_application.pl  0002_upgrade_from_1_4_to_1_6.pl  0003_add_new_applications.pl  0004_upgrade_from_1_6_001_to_1_6_002.pl  Makefile.am
client/egroupware/tools/: Makefile.am  ebox-egroupware-backup  ebox-egroupware-enable  ebox-egroupware-install-all-languages  ebox-egroupware-regen-db  ebox-egroupware-set-auth  ebox-egroupware-set-languages  ebox-egroupware-set-vdomain  ebox-egroupware-setup  ebox-egroupware-update-db  extract-perl-from-mason
client/firewall/: AUTHORS  ChangeLog  INSTALL  INSTALL.es  Makefile.am  configure.ac
client/firewall/conf/: 80firewall.conf  (+1 more)
client/openvpn/: AUTHORS  ChangeLog  INSTALL  Makefile.am  README  configure.ac
client/samba/: AUTHORS  ChangeLog  INSTALL  INSTALL.es  Makefile.am  README  configure.ac
common/libebox/: AUTHORS  ChangeLog  INSTALL  INSTALL.es  Makefile.am  TESTING  autogen.sh  configure.ac
extra/language-packs/: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  autogen.sh  configure.ac  generate-mos  update-pos
extra/moddev/: Changelog  Makefile.am  TODO  autogen.sh  configure.ac
extra/samba-vscan/: .cvsignore  AUTHORS  ChangeLog  FAQ  INSTALL  Makefile.in  NEWS  README  TODO  VERSION  aclocal.m4  autogen.sh  configure.in  install-sh  lib  samba-2.2.0a-vfs.dif  samba-2.2.1a-vfs.dif  samba-2.2.2-vfs.dif  samba-2.2.3-vfs.dif  samba-configure.in-fbsd-libdl.dif
extra/zmoddev/: ChangeLog  Changelog  Makefile.am  TODO  configure.ac
main/core/: ChangeLog  Makefile.am  TESTING  autogen.sh  configure.ac  destructor_de_masas.sh
main/ebackup/: AUTHORS  ChangeLog  Makefile.am  configure.ac  ebox_backup
main/ftp/: AUTHORS  ChangeLog  Makefile.am  configure.ac
main/monitor/: AUTHORS  ChangeLog  Makefile.am  configure.ac
main/openvpn/: AUTHORS  ChangeLog  INSTALL  Makefile.am  configure.ac
main/remoteservices/: ChangeLog  Makefile.am  TODO  configure.ac
main/samba/: AUTHORS  ChangeLog  INSTALL.es  Makefile.am  configure.ac
main/usercorner/: AUTHORS  ChangeLog  Makefile.am  configure.ac
main/users/: ChangeLog  Makefile.am  README  configure.ac
server/control-center/: AUTHORS  ChangeLog  INSTALL  Makefile.am  configure.ac
(+15586 files in other folders)
