## Process this file with automake to produce Makefile.in


SUBDIRS =  conf src schemas  stubs migration po tools

MAINTAINERCLEANFILES = aclocal.m4 configure Makefile.in config.status \
  config.log config/mkinstalldirs depcomp config/install-sh config/missing \
  config/config.guess config/config.sub po/Makefile.am
