AC_INIT([emoddev], [0.1.2])

AC_CONFIG_AUX_DIR([config])
AC_CONFIG_SRCDIR([src/ebox-moddev-create.in])

AM_INIT_AUTOMAKE([foreign])

AM_MAINTAINER_MODE


AC_DEFINE_DIR(DATADIR, datadir)
AC_DEFINE_DIR(LIBDIR, libdir)

AC_CONFIG_FILES([
Makefile
src/Makefile
src/ebox-moddev-create
src/ebox-moddev-model
src/ebox-moddev-type
stubs/Makefile
])

AC_OUTPUT
